# betting-game

./: docker-compose.yml  proxy.conf
gamble_app/: README.md  (+1 more)
gamble_rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.toml  test.http
gamble_rs/migrations/: 0001_init.down.sql  0001_init.up.sql
gamble_rs/src/: error.rs  main.rs  server_log.rs
gamble_rs/src/config/: config.rs  mod.rs  staticfile.rs
gamble_rs/src/controller/: auth.rs  database_model.rs  error.rs  file_upload.rs  mod.rs  user.rs
gamble_rs/src/controller/game/: daily_game.rs  game.rs  game_result.rs  mod.rs  statment.rs  user_bet.rs
gamble_rs/src/controller/payments/: account.rs  make_deposite.rs  mod.rs  payment_gateway.rs  transition.rs  user_accoutn.rs  withdrawal_request_controlle.rs
gamble_rs/src/cronjob/: task.rs
gamble_rs/src/ctx/: mod.rs  user_ctx.rs
gamble_rs/src/database/utils/: index.rs
gamble_rs/src/libs/: auth.rs  custom_auth.rs  custom_validation.rs  error.rs  mod.rs  utils.rs
gamble_rs/src/models/: app_state.rs  auth.rs  file_upload.rs  mod.rs  statments.rs  user.rs  utils.rs
gamble_rs/src/models/game/: daily_game.rs  game_result.rs  games.rs  mod.rs  user_bet.rs
gamble_rs/src/models/index/: home.rs
gamble_rs/src/models/payment_model/: account.rs  make_deposite.rs  mod.rs  payments.rs  tranistion.rs  user_account.rs  withdraw_request.rs
gamble_rs/src/routers/: error.rs  mod.rs  mw_auth.rs  router_auth.rs  router_gen_token.rs  router_user.rs
gamble_rs/src/routers/game/: daily_game.rs  game.rs  game_result.rs  mod.rs  statement_route.rs  user_bet.rs
(+234 files in other folders)
